# pixelterm

./: .gitignore  LICENSE  README.md  kbtest.py  pyproject.toml  requirements.txt  setup.py
charred/: __init__.py  font.py  frame.py  render_utils.py
examples/bad_apple/: README.md  main.py
examples/bad_apple/helpers/: audio.py  vid_to_np.py
examples/snake/: README.md  main.py  requirements.txt  snake.py
examples/terrible_apple/: README.md  bouncy_square.py  bouncy_text.py  main.py  requirements.txt
examples/terrible_apple/helpers/: vid_to_np.py
pixelterm/: __init__.py  pixelterm_types.py
src/pixelterm/: __init__.py  cursor_utils.py  font.py  frame.py  render_utils.py
tests/: README.md  manual_test_colors.py  manual_test_cursor.py  manual_test_fill.py  manual_test_font.py  manual_test_gradient.py  manual_test_image.py  manual_test_line.py  manual_test_move.py  manual_test_rect.py  test_automated.py
