[project]
name = "charred_crystaltine"
version = "1.0.0"
authors = [
  { name="crystaltine", email="msh379c@outlook.com" },
]
description = "Terminal Graphics Rendering Library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/crystaltine/charred"
Issues = "https://github.com/crystaltine/charred/issues"

[build-system]
requires = ["setuptools>=61.0", "numpy", "scikit-image", "blessed"]
build-backend = "setuptools.build_meta"