[project]
name = "pixelterm_crystaltine"
version = "1.0.0"
authors = [
  { name="crystaltine", email="msh379c@outlook.com" },
]
description = "Terminal Graphics Rendering Library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/crystaltine/pixelterm"
Issues = "https://github.com/crystaltine/pixelterm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"